fix: improve BNPL messaging prevent unnecessary re-renders and layout shifts

--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -308,3 +308,7 @@
   &:not(.display-flex)
     &.dual-messaging > div.visible:first-of-type
       margin-bottom: 15px
+
+#stripe-messaging-container,
+#paypal-messaging-container
+  transition: min-height 0.1s ease-out
